* Tweets for popularized videos (liked by an admin) now have their status text escaped with CGI.escape to avoid ampersand issues with twitter * Fixed a bug that caused the comment bubble icon to the left of the Reply link (below inline comments) from being aligned left * Inline comments are now collapsed (hidden behind a 'n more comments...' link)

--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -429,6 +429,15 @@
 	font-size: 8pt;
 }
 
+.video .inline .more-comments {
+	font-style: italic;
+}
+
+/* hidden comment */
+.video .hidden {
+	display: none;
+}
+
 /* statistics */
 .video-statistics {
 	background-color: #f9f9f9;
